fix: horizontal scroll

--- a/src/modules/Home/ui/SellSection/SellSection.module.scss
+++ b/src/modules/Home/ui/SellSection/SellSection.module.scss
@@ -3,7 +3,6 @@
 .sellSection{
   position: relative;
   height: 200vh;
-  overflow: hidden;
 
   &__content{
     display: flex;
